[package]
name = "libwing"
version = "0.6.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dannydulai/libwing"
edition = "2021"
description = "A library for communicationg with the Behringer Wing Digital Mixer"
documentation = "https://docs.rs/libwing"

[lib]
name = "libwing"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
socket2 = "0.5"
lazy_static = "1.4"
jzon = "0.12.5"
thiserror = "2.0.11"
eframe = "0.26.0"

[[bin]]
name = "wingmeters"
path = "tools/wingmeters.rs"

[[bin]]
name = "wingmon"
path = "tools/wingmon.rs"

[[bin]]
name = "wingschema"
path = "tools/wingschema.rs"

[[bin]]
name = "wingprop"
path = "tools/wingprop.rs"
